--- a/0525_Assignment_travel megazine/0525_Assignment_travel megazine/Base.lproj/Main.storyboard
+++ b/0525_Assignment_travel megazine/0525_Assignment_travel megazine/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4Wj-KM-Aym">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RLa-lJ-8wX">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Map view configurations" minToolsVersion="14.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -245,7 +246,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zrf-SI-A79">
-                                <rect key="frame" x="16" y="353" width="361" height="21"/>
+                                <rect key="frame" x="16" y="203" width="361" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -256,7 +257,7 @@
                         <constraints>
                             <constraint firstItem="Zrf-SI-A79" firstAttribute="leading" secondItem="yk9-fq-0oc" secondAttribute="leading" constant="16" id="3ov-lY-lQo"/>
                             <constraint firstItem="yk9-fq-0oc" firstAttribute="trailing" secondItem="Zrf-SI-A79" secondAttribute="trailing" constant="16" id="8Fz-Fi-41a"/>
-                            <constraint firstItem="Zrf-SI-A79" firstAttribute="top" secondItem="yk9-fq-0oc" secondAttribute="top" constant="250" id="ACu-a6-fh9"/>
+                            <constraint firstItem="Zrf-SI-A79" firstAttribute="top" secondItem="yk9-fq-0oc" secondAttribute="top" constant="100" id="Q3c-ao-wam"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="uhl-8A-7kl">
@@ -284,7 +285,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1rt-nX-KxZ">
-                                <rect key="frame" x="16" y="309" width="361" height="21"/>
+                                <rect key="frame" x="16" y="159" width="361" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLa-Wi-5Zr">
+                                <rect key="frame" x="16" y="280" width="361" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -293,12 +300,16 @@
                         <viewLayoutGuide key="safeArea" id="ZdV-LF-MJs"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="jLa-Wi-5Zr" firstAttribute="top" secondItem="1rt-nX-KxZ" secondAttribute="bottom" constant="100" id="89w-0Z-26S"/>
                             <constraint firstItem="1rt-nX-KxZ" firstAttribute="leading" secondItem="ZdV-LF-MJs" secondAttribute="leading" constant="16" id="NoL-QU-IsB"/>
-                            <constraint firstItem="1rt-nX-KxZ" firstAttribute="top" secondItem="ZdV-LF-MJs" secondAttribute="top" constant="250" id="g7G-hC-4WO"/>
+                            <constraint firstItem="ZdV-LF-MJs" firstAttribute="trailing" secondItem="jLa-Wi-5Zr" secondAttribute="trailing" constant="16" id="Ty0-FF-zuo"/>
+                            <constraint firstItem="1rt-nX-KxZ" firstAttribute="top" secondItem="ZdV-LF-MJs" secondAttribute="top" constant="100" id="g7G-hC-4WO"/>
+                            <constraint firstItem="jLa-Wi-5Zr" firstAttribute="leading" secondItem="ZdV-LF-MJs" secondAttribute="leading" constant="16" id="mbD-Py-AZ1"/>
                             <constraint firstItem="ZdV-LF-MJs" firstAttribute="trailing" secondItem="1rt-nX-KxZ" secondAttribute="trailing" constant="16" id="wk3-Qk-AU6"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="descriptionLabel" destination="jLa-Wi-5Zr" id="x6j-jx-fda"/>
                         <outlet property="mainLabel" destination="1rt-nX-KxZ" id="aas-gX-nzT"/>
                     </connections>
                 </viewController>
@@ -470,7 +481,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pQt-ZW-v6Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5710.6870229007627" y="-35.211267605633807"/>
+            <point key="canvasLocation" x="6635.8778625954192" y="-35.211267605633807"/>
         </scene>
         <!--Restaurant2 Table View Controller-->
         <scene sceneID="vmP-f6-vD3">
@@ -560,12 +571,13 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vRc-NG-PZ2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6498.4732824427474" y="-35.211267605633807"/>
+            <point key="canvasLocation" x="7425.1908396946565" y="-35.211267605633807"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Item-->
         <scene sceneID="rWe-qC-qZ6">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RLa-lJ-8wX" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" image="magnifyingglass" catalog="system" id="GGd-da-3pt"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="aRG-rW-e05">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -578,7 +590,38 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ucl-46-ZAg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4783.9694656488546" y="-35.211267605633807"/>
+            <point key="canvasLocation" x="5710.6870229007627" y="-35.211267605633807"/>
+        </scene>
+        <!--Restaurant Location View Controller-->
+        <scene sceneID="ubT-bn-8jw">
+            <objects>
+                <viewController storyboardIdentifier="RestaurantLocationViewController" id="9fJ-fa-JCx" customClass="RestaurantLocationViewController" customModule="_525_Assignment_travel_megazine" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nTb-2c-XOH">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8px-Rg-foe">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <standardMapConfiguration key="preferredConfiguration"/>
+                            </mapView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ruh-a5-whE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8px-Rg-foe" firstAttribute="top" secondItem="ruh-a5-whE" secondAttribute="top" id="0ge-Vr-UJ0"/>
+                            <constraint firstItem="ruh-a5-whE" firstAttribute="trailing" secondItem="8px-Rg-foe" secondAttribute="trailing" id="BXP-cx-Q7n"/>
+                            <constraint firstItem="8px-Rg-foe" firstAttribute="leading" secondItem="ruh-a5-whE" secondAttribute="leading" id="VQ6-2Z-6ly"/>
+                            <constraint firstItem="ruh-a5-whE" firstAttribute="bottom" secondItem="8px-Rg-foe" secondAttribute="bottom" id="ZZh-fM-VS3"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="W8K-34-Tsd"/>
+                    <connections>
+                        <outlet property="mapView" destination="8px-Rg-foe" id="k5p-kp-5fT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WaZ-oj-V43" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6636" y="666"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="tay-vD-E1k">
@@ -642,7 +685,7 @@
         <scene sceneID="nwN-PM-XfP">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cwN-dV-Dau" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="LbF-8I-mGR"/>
+                    <tabBarItem key="tabBarItem" title="Item" image="car" catalog="system" id="LbF-8I-mGR"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Fxr-my-y60">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -659,6 +702,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="car" catalog="system" width="128" height="95"/>
         <image name="doc" catalog="system" width="115" height="128"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="mapp" width="128" height="128"/>
@@ -667,7 +711,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray3Color">
-            <color red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
